--- a/app/scss/globals/_layout.scss
+++ b/app/scss/globals/_layout.scss
@@ -1,15 +1,14 @@
 @use '../utilities/' as *;
 @use './colors' as *;
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   background-color: $almostWhite;
   position: relative;
   overflow-x: hidden;
-  // min-height: 100vh;
-
-  @include breakpoint-down('small') {
-    overflow-x: hidden;
-  }
 }
 
 .bg-overlay {
